<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@drawable/actionbar_bg"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/daily_review"
        app:titleTextAppearance="@style/ToolbarTitle.Doit"
        app:titleTextColor="@color/actionbar_title_text_color"
        app:theme="@style/ToolbarMenuTheme"
        xmlns:app="http://schemas.android.com/apk/res-auto" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/bottombar_wrap"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/actionbar_bg"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView android:id="@+id/tomorrow_btn" android:text="@string/date_tomorrow" android:drawableTop="@drawable/icon_plan_tomorrow" android:onClick="onTomorrowClick" style="@style/BottomBarButton" />
        <TextView android:id="@+id/record_time_spent_btn" android:text="@string/record_time_spent" android:drawableTop="@drawable/icon_plan_estimate" android:onClick="onSpentTimeClick" style="@style/BottomBarButton" />
        <TextView android:id="@+id/delete_btn" android:text="@string/delete" android:drawableTop="@drawable/icon_plan_delete" android:onClick="onDeleteClick" style="@style/BottomBarButton" />
    </LinearLayout>
</LinearLayout>
