<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/done_msg"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_plan" />
    <View
        android:id="@+id/divider"
        android:background="#19000000"
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_below="@id/done_msg"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_below="@id/divider"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout android:gravity="right" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:text="@string/arrange_with_colon" android:layout_marginRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:text="@string/left_with_colon" android:layout_marginRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/arranged_time" android:textSize="18sp" android:textColor="#CC1262A1" android:layout_marginBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:id="@+id/left_time" android:textSize="18sp" android:textColor="#CC1262A1" android:layout_marginBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/go_more_from_next_btn"
        android:textSize="18sp"
        android:textColor="@color/actionbar_bg"
        android:background="@android:color/transparent"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/get_from_next"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
